fdo#41109 RTF shape import: shpz has priority over dhgt

And not the other way around, how
24ee3df385cf2aa95cd888581c84fdf90cc682dc (RTF import: fix priority
handling of shpz vs dhgt, 2012-04-10) did, this time with a reproducer.

Change-Id: I9412341c6b35ca2760e4490a18f11bc6a0e0b78a
(cherry picked from commit ff7ac1a9b82bc20fe6e3d82322e53a7024edb84f)